# dfpac

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
config/experiment/: benchmark-pses.yaml  lobo-descriptors.yaml  lobo-pses.yaml
data/: README.md
data/descriptors/lobo/test/: UP000000425.parquet  UP000000586.parquet  UP000000625.parquet  UP000000750.parquet  UP000000799.parquet  UP000000800.parquet  UP000001432.parquet  UP000001584.parquet  UP000006386.parquet  UP000326807.parquet
data/descriptors/lobo/training/: negative.parquet
data/fasta/benchmark/test/: test.fasta
data/fasta/benchmark/training/: negative.fasta  positive.fasta
data/fasta/lobo/: negative.fasta  positive.fasta
data/pses/benchmark/test/: test.parquet
data/pses/benchmark/training/: negative.parquet  positive.parquet
data/pses/lobo/test/: UP000000425.parquet  UP000000586.parquet  UP000000625.parquet  UP000000750.parquet  UP000000799.parquet  UP000000800.parquet  UP000001432.parquet  UP000001584.parquet  UP000006386.parquet  UP000326807.parquet
data/pses/lobo/training/: negative.parquet  positive.parquet
experiments/benchmark/pses/1/: hparams.yaml  predictions_test.csv  scores.csv
experiments/benchmark/pses/10/: hparams.yaml  predictions_test.csv  scores.csv
experiments/benchmark/pses/2/: hparams.yaml  predictions_test.csv  (+1 more)
notebooks/: analysis.ipynb
src/dfpac/: run.py  settings.py
src/dfpac/dataset/: base.py  benchmark.py  lobo.py  proteome.py
src/dfpac/evaluation/: evaluate.py  metrics.py  pipeline.py  plots.py  stats.py
src/dfpac/utils/: misc.py
(+691 files in other folders)
